Job comparsions. Blocking jobs. -Wall
- Extract job comparisons into their own file to simplify job description and clarify the 2 argument polymorphism
- Start adding jobs which block other jobs by adding a list to JobInterface
- Add -Wall argument to CXXFLAGS

--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -1,7 +1,7 @@
 
 all: $(addprefix $(TEST_DIR)/, $(TESTS))
 
-$(TEST_DIR)/test_jobs: test_jobs.cpp $(addprefix $(OBJ_DIR)/, job_interface.o jobs.o priority.o string_tools.o)
+$(TEST_DIR)/test_jobs: test_jobs.cpp $(addprefix $(OBJ_DIR)/, job_interface.o jobs.o priority.o string_tools.o job_comparisons.o)
 	@echo "Making     "$<
 ifeq ($(VERBOSE), 1)
 	$(CXX) $(CXXFLAGS) $(TINC) $^ -o $@
