--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -1,7 +1,7 @@
 
 all: $(addprefix $(TEST_DIR)/, $(TESTS))
 
-$(TEST_DIR)/test_jobs: test_jobs.cpp $(addprefix $(OBJ_DIR)/, job_interface.o jobs.o priority.o string_tools.o job_comparisons.o)
+$(TEST_DIR)/test_jobs: test_jobs.cpp $(addprefix $(OBJ_DIR)/, job_interface.o jobs.o priority.o compare_tools.o job_comparisons.o)
 	@echo "Making     "$<
 ifeq ($(VERBOSE), 1)
 	$(CXX) $(CXXFLAGS) $(TINC) $^ -o $@
@@ -9,7 +9,7 @@ else
 	@$(CXX) $(CXXFLAGS) $(TINC) $^ -o $@
 endif
 
-$(TEST_DIR)/test_string_tools: test_string_tools.cpp $(addprefix $(OBJ_DIR)/, string_tools.o)
+$(TEST_DIR)/test_compare_tools: test_compare_tools.cpp $(addprefix $(OBJ_DIR)/, compare_tools.o)
 	@echo "Making     "$<
 ifeq ($(VERBOSE), 1)
 	$(CXX) $(CXXFLAGS) $(TINC) $^ -o $@
@@ -19,4 +19,4 @@ endif
 
 clean:
 	rm -f $(TEST_DIR)/test_jobs
-	rm -f $(TEST_DIR)/test_string_tools
+	rm -f $(TEST_DIR)/test_compare_tools
