--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -1,8 +1,10 @@
+DIR_JOB_SRCS=$(wildcard ../jobs/*.cpp)
+JOB_SRCS=$(DIR_JOB_SRCS:../jobs/%=%)
+JOB_OBJS=$(addprefix $(OBJ_DIR)/, $(JOB_SRCS:.cpp=.o))
 
 all: $(addprefix $(TEST_DIR)/, $(TESTS))
 
-$(TEST_DIR)/test_jobs: test_jobs.cpp $(addprefix $(OBJ_DIR)/, job_interface.o jobs.o priority.o compare_tools.o job_comparisons.o)
-	@echo "Making     "$<
+$(TEST_DIR)/test_jobs: test_jobs.cpp $(JOB_OBJS) $(addprefix $(OBJ_DIR)/, compare_tools.o)
 ifeq ($(VERBOSE), 1)
 	$(CXX) $(CXXFLAGS) $(TINC) $^ -o $@
 else
@@ -17,7 +19,7 @@ else
 	@$(CXX) $(CXXFLAGS) $(TINC) $^ -o $@
 endif
 
-$(TEST_DIR)/test_deadlined_jobs: test_deadlined_jobs.cpp $(addprefix $(OBJ_DIR)/, deadlined_jobs.o job_interface.o jobs.o priority.o compare_tools.o job_comparisons.o)
+$(TEST_DIR)/test_deadlined_jobs: test_deadlined_jobs.cpp $(JOB_OBJS) $(addprefix $(OBJ_DIR)/, compare_tools.o)
 	@echo "Making     "$<
 ifeq ($(VERBOSE), 1)
 	$(CXX) $(CXXFLAGS) $(TINC) $^ -o $@
